--- a/2017年11月25日的讨论.md
+++ b/2017年11月25日的讨论.md
@@ -8,7 +8,7 @@
    - 批量修改
    - **bug定位和预测**
    - 代码联系（帮助开发者使用API等）
-   - 判断团队士气？？
+   - 判断团队士气，从心理科学层面判断团队在不同阶段的状态
 2. 提供的展望：
    - 自然语言处理mailing list
    - 连接多个资源库
@@ -27,8 +27,8 @@
 - 爬虫
 - 数据挖掘、过滤
 - 能处理大数据的高效数据库技术
-- 图形界面（可能要？）
-- 还有的忘了……请补充
+- 软件工程知识
+- 机器学习，数据分析知识
 
 ## 三、要做的事
 
