--- a/相关名词.md
+++ b/相关名词.md
@@ -1,5 +1,5 @@
-##代码搜索引擎
+#代码搜索引擎
 -[谷歌代码搜索](https://code.google.com/)
 谢涛的工具就是用的google代码搜索引擎，他是在
 -[searchcode](https://searchcode.com/?q=copy)
--这个我们可以加进去用
+这个我们可以加进去用
