--- a/谢涛系统运行基本流程和一些思考.md
+++ b/谢涛系统运行基本流程和一些思考.md
@@ -17,6 +17,7 @@ e=>end: 结束
 st->io1->cd->gcse->ldb->codea->mis->processor->io2->e
 
 ```
+？？？流程图显示不出来？？？
 
 由此可见，谢涛的处理流程基本上是属于“先有输入再找数据”的类型，估计可能是由于开源资料库太大，保存到本地进行分析受限于网络原因和性能问题无法做到，所以采用的这种模式。这样的模式有一些问题：
 
