--- a/相关名词.md
+++ b/相关名词.md
@@ -1,5 +1,11 @@
 # 代码搜索引擎
 - [谷歌代码搜索](https://code.google.com/)
-谢涛的工具就是用的google代码搜索引擎，他是在
+谢涛的工具就是用的google代码搜索引擎，他是在04年之前就是searchcode还没有火起来的时候做的工具
 - [searchcode](https://searchcode.com/?q=copy)
 这个我们可以加进去用
+# 语义分析
+- AST 抽象语法树 是编译原理的语义分析里的一个概念，就是通过这种结构我们可以分析对应的语言的语法，这种程序有很多了，我们就是要找语法分析器。
+python就自带一个叫ast的模块可以做语义分析
+- [了解AST](http://www.jianshu.com/p/8fa61a552ecf)
+- [python ast 模块了解](http://blog.csdn.net/ma89481508/article/details/56017697)
+- [python ast 模块官网信息](https://docs.python.org/3.5/library/ast.html)
