--- a/谢涛系统运行基本流程和一些思考.md
+++ b/谢涛系统运行基本流程和一些思考.md
@@ -25,7 +25,7 @@ st->io1->cd->gcse->ldb->codea->mis->processor->io2->e
 - 采用GCSE的话，在国内访问可能会有困难
 - 获取到的代码是一些片段，而不是项目的全局
 - （这个是我主观臆测的）谢涛的方案实际上可以说是基于代码搜索引擎的一种改良，与我们想象的软件资源库联系其实不多。首先，谢涛的方案是基于搜索引擎给出的结果库的，这点实现起来就比爬下GitHub，建立大型数据库，自主分类什么的省下了很多工夫。其次，实际上主要的核心技术是代码分析技术，旨在“读懂”代码中对象的转换，软件资源库实际上仅在第一阶段提供了数据。
-
+wx：用编译原理的语法分析的相关知识，他的系统用的是AST和DAG，因为我们对语法分析的了解也比较少，这里可以问问老师。
 如果我们是做python的项目的话，就可能有一些问题：
 
 - python 是弱类型语言，对于某个函数，可能会有不同的返回类型，对代码的分析能力提出更高要求
