--- a/相关名词.md
+++ b/相关名词.md
@@ -5,7 +5,12 @@
 这个我们可以加进去用
 # 语义分析
 - AST 抽象语法树 是编译原理的语义分析里的一个概念，就是通过这种结构我们可以分析对应的语言的语法，这种程序有很多了，我们就是要找语法分析器。
-python就自带一个叫ast的模块可以做语义分析
+python就自带一个叫ast的模块可以做语义分析。
+对开发者而言，AST的作用就是可以精准的定位到代码的任何地方，它就像是是你的手术刀，对代码进行一系列的操作。
 - [了解AST](http://www.jianshu.com/p/8fa61a552ecf)
 - [python ast 模块了解](http://blog.csdn.net/ma89481508/article/details/56017697)
 - [python ast 模块官网信息](https://docs.python.org/3.5/library/ast.html)
+# 框架和库
+- 框架：封装了某领域内处理流程的控制逻辑，所以我们经常说框架是一个半成品的应用。由于领域的种类是如此众多，所以框架必须具有针对性。
+框架好像也是我们一开始认为需要提供的。
+- [框架](https://www.cnblogs.com/anorthwolf/archive/2009/12/28/1634243.html)
