--- a/相关名词.md
+++ b/相关名词.md
@@ -14,3 +14,5 @@ python就自带一个叫ast的模块可以做语义分析。
 - 框架：封装了某领域内处理流程的控制逻辑，所以我们经常说框架是一个半成品的应用。由于领域的种类是如此众多，所以框架必须具有针对性。
 框架好像也是我们一开始认为需要提供的。
 - [框架](https://www.cnblogs.com/anorthwolf/archive/2009/12/28/1634243.html)
+# 方法内嵌
+- [原文叫 method inline](https://www.refactoring.com/catalog/inlineMethod.html)
