--- a/相关名词.md
+++ b/相关名词.md
@@ -16,3 +16,12 @@ python就自带一个叫ast的模块可以做语义分析。
 - [框架](https://www.cnblogs.com/anorthwolf/archive/2009/12/28/1634243.html)
 # 方法内嵌
 - [原文叫 method inline](https://www.refactoring.com/catalog/inlineMethod.html)
+# 前人做的工作
+- keyword-based
+- [signature matching](http://www.cs.cmu.edu/~wing/publications/ZaremskiWing93.pdf)
+“signature matching is the process of determining when a
+library component “matches” a query. We can reasonably
+assume that signature information is either provided with
+or derivable from code components, since this information
+is typically required by the compiler. ”
+总的来说，它是基于代码语境的，所以用户可以不知道自己究竟要用什么方法。它通过函数/模块的调用参数类型和输出参数类型实现序列的匹配。（For example, users formulate queries in terms of key-value pairs to retrieve records from a relational database. H）signature matching有两种match的方式，分别对应函数和模块。
