--- a/相关名词.md
+++ b/相关名词.md
@@ -1,27 +1,32 @@
 # 代码搜索引擎
 - [谷歌代码搜索](https://code.google.com/)
-谢涛的工具就是用的google代码搜索引擎，他是在04年之前就是searchcode还没有火起来的时候做的工具
+  谢涛的工具就是用的google代码搜索引擎，他是在04年之前就是searchcode还没有火起来的时候做的工具
 - [searchcode](https://searchcode.com/?q=copy)
-这个我们可以加进去用
+  这个我们可以加进去用
 # 语义分析
 - AST 抽象语法树 是编译原理的语义分析里的一个概念，就是通过这种结构我们可以分析对应的语言的语法，这种程序有很多了，我们就是要找语法分析器。
-python就自带一个叫ast的模块可以做语义分析。
-对开发者而言，AST的作用就是可以精准的定位到代码的任何地方，它就像是是你的手术刀，对代码进行一系列的操作。
+  python就自带一个叫ast的模块可以做语义分析。
+  对开发者而言，AST的作用就是可以精准的定位到代码的任何地方，它就像是是你的手术刀，对代码进行一系列的操作。
 - [了解AST](http://www.jianshu.com/p/8fa61a552ecf)
 - [python ast 模块了解](http://blog.csdn.net/ma89481508/article/details/56017697)
 - [python ast 模块官网信息](https://docs.python.org/3.5/library/ast.html)
 # 框架和库
 - 框架：封装了某领域内处理流程的控制逻辑，所以我们经常说框架是一个半成品的应用。由于领域的种类是如此众多，所以框架必须具有针对性。
-框架好像也是我们一开始认为需要提供的。
+  框架好像也是我们一开始认为需要提供的。
 - [框架](https://www.cnblogs.com/anorthwolf/archive/2009/12/28/1634243.html)
 # 方法内嵌
 - [原文叫 method inline](https://www.refactoring.com/catalog/inlineMethod.html)
 # 前人做的工作
 - keyword-based
 - [signature matching](http://www.cs.cmu.edu/~wing/publications/ZaremskiWing93.pdf)
-“signature matching is the process of determining when a
-library component “matches” a query. We can reasonably
-assume that signature information is either provided with
-or derivable from code components, since this information
-is typically required by the compiler. ”
-总的来说，它是基于代码语境的，所以用户可以不知道自己究竟要用什么方法。它通过函数/模块的调用参数类型和输出参数类型实现序列的匹配。（For example, users formulate queries in terms of key-value pairs to retrieve records from a relational database. H）signature matching有两种match的方式，分别对应函数和模块。
+  “signature matching is the process of determining when a
+  library component “matches” a query. We can reasonably
+  assume that signature information is either provided with
+  or derivable from code components, since this information
+  is typically required by the compiler. ”
+  总的来说，它是基于代码语境的，所以用户可以不知道自己究竟要用什么方法。它通过函数/模块的调用参数类型和输出参数类型实现序列的匹配。（For example, users formulate queries in terms of key-value pairs to retrieve records from a relational database. H）signature matching有两种match的方式，分别对应函数和模块。
+
+# APIs
+
+- 目前GitHub推荐的API已经更新到v4版本，[官方文档在此](https://developer.github.com/v4/)， 主要分为请求和操作两大类，其中部分API需要申请token，我申请了一个：`8a607c40998af86fc44fe00630ac6c495fa1a8b9`。GitHub和许多其他的API都使用JSON格式返回信息。API具有请求频率限制，似乎是每分钟最多60次？
+- GitHub的v4版本API似乎比较高级，如果只是请求信息的话，GitHub也有一些简单的API，可以访问[这个网站](https://api.github.com/)， 有一些用法的介绍（JSON）
