--- a/申请书准备.md
+++ b/申请书准备.md
@@ -3,6 +3,13 @@ https://linux.cn/article-9257-1.html- 如何方便地在类 Unix 系统中浏览
 
 
 
+https://www.v2ex.com/t/181425 给所有 GitHub 项目打上标签
+
+
+
+
+
+
 
 我们的输入输出是什么样的。谢涛系统（以下简称xt）中是以已知的对象类型为输入，以要求（分析结果？）的对象类型作为输出。
 他的初衷和我们不同，他的面向人群是那些
