--- a/相关名词.md
+++ b/相关名词.md
@@ -28,5 +28,5 @@
 
 # APIs
 
-- 目前GitHub推荐的API已经更新到v4版本，[官方文档在此](https://developer.github.com/v4/)， 主要分为请求和操作两大类，其中部分API需要申请token，我申请了一个：`8a607c40998af86fc44fe00630ac6c495fa1a8b9`。GitHub和许多其他的API都使用JSON格式返回信息。API具有请求频率限制，似乎是每分钟最多60次？
+- 目前GitHub推荐的API已经更新到v4版本，[官方文档在此](https://developer.github.com/v4/)， 主要分为请求和操作两大类，其中部分API需要申请token，我申请了一个：`8a607c40998af86fc44fe00630ac6c495fa1a8b9`。另一个：6805a3d81bce8c25d823cc8df37c3b7ed8ca2a26 。GitHub和许多其他的API都使用JSON格式返回信息。API具有请求频率限制，似乎是每分钟最多60次？
 - GitHub的v4版本API似乎比较高级，如果只是请求信息的话，GitHub也有一些简单的API，可以访问[这个网站](https://api.github.com/)， 有一些用法的介绍（JSON）
